@@ -1,3 +1,12 @@
+2011-03-03  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Reviewed by Darin Adler.
+
+        Add audio tag tests to the media controls manual test suite.
+        https://bugs.webkit.org/show_bug.cgi?id=55722
+
+        * manual-tests/media-controls.html: Added 4 audio tests.
+
 2011-03-03  Gyuyoung Kim  <gyuyoung.kim@samsung.com>
 
         Reviewed by Eric Seidel.
